--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
     "name": "Ocean Driven",
     "version": "1.0.0",
     "description": "",
-    "engines": {
-      "node": "16.17.0",
-      "npm": "8.15.0"
-    },
     "scripts": {
       "start": "cd client && npm start",
       "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-      "install": "cd server && npm i && cd ../client && npm i",
+      "install": "cd client && npm i",
       "seed": "cd server && npm run seed",
       "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
     },
