--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ocean-driven-server",
+  "name": "mern-server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -12,13 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.11.1",
+    "apollo-server-express": "^3.6.2",
     "bcrypt": "^4.0.1",
-    "express": "^4.18.2",
-    "graphql": "^16.6.0",
+    "express": "^4.17.2",
+    "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.10.0",
-    "stripe": "^8.222.0"
+    "mongoose": "^6.1.8",
+    "stripe": "^8.67.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
