--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Ocean Driven",
-  "name": "A Boat Rental Company",
+  "name": "Ocean Driven",
   "description": "Ocean Driven is a boat rental company that offers a variety of boats for rent. We have a wide range of boats for rent, from small boats to large boats. We also offer boat rentals for special events.",
   "icons": [
     {
@@ -9,12 +9,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "favicon-16x16.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "16x16"
     },
     {
-      "src": "logo512.png",
+      "src": "favicon-32x32.png",
       "type": "image/png",
       "sizes": "512x512"
     }
