--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^7.6.0"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
     "react-open-weather": "^1.3.0",
     "server": "^1.0.38"
   }
