--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.9",
     "@chakra-ui/react": "^2.5.1",
+    "@cloudinary/react": "^1.11.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
@@ -18,6 +19,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cloudinary": "^1.35.0",
     "framer-motion": "^10.0.1",
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
