--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "concurrently": "^7.6.0"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.9.2",
     "@react-google-maps/api": "^2.18.1",
+    "cloudinary": "^1.35.0",
     "react-open-weather": "^1.3.0",
     "server": "^1.0.38"
   }
